Le agregamos las clasas a las etiquetas del Login

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheets" href="./assets/style.css">
     <title>LOGIN</title>
 </head>
 <body>
-    <section>
+    <section class="login" id="login">
         <form>
             <h2>LOGIN</h2>
-            <div>
+            <div class="input-group">
                 <label form="name">Usuario</label>
                 <input type="text" name="name" id="">
         
