--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <section class="login" id="login">
         <form>
             <h2>LOGIN</h2>
+            <img src="https://apps.odoo.com/web/image/loempia.module/102202/icon_image?unique=4f3dde8" alt="Imagen 2" width="400" height="200">
             <div class="input-group">
                 <label form="name">Usuario</label>
                 <input type="text" name="name" id="">
