Le agregamos un fondo a nuestro login y le cambiamos el color de letra y modificamos un nombre de los que teniamos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h2>LOGIN</h2>
             <img src="https://apps.odoo.com/web/image/loempia.module/102202/icon_image?unique=4f3dde8" alt="Imagen 2" width="400" height="200">
             <div class="input-group">
-                <label form="name">Usuario</label>
+                <label form="name">User</label>
                 <input type="text" name="name" id="">
         
                 <label form="pass">Password</label>
