Agregamos los cuadros al centro y le pusimos un estilo para que cambie de color

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -11,9 +11,9 @@
         <h1>CONTACTOS</h1>
     </header>
 
-    <div>
+    <div class="contenedor">
         <div class="section-contact" id="contacto1">
-
+            <h1>Maria</h1>
         </div>
     
         
