--- a/assets/nuevoContacto.html
+++ b/assets/nuevoContacto.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../assets/style2.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Añadir Contacto</title>
 </head>
 <body>
-    
+    <header>
+        <h1>CONTACTO NUEVO</h1>
+    </header>
+
+    <section class="nuevo" id="nuevo">
+        <form>
+            <h2></h2>
+            <div class="input-group">
+                <label for="name">Nombre Completo</label>
+                <input type="text" name="name" id="">
+
+                <label for="cell">Número de Teléfono</label>
+                <input type="text" name="cell" id="">
+
+                <label for="direccion">Dirección</label>
+                <input type="text" name="direccion" id="">
+
+                <label for="email">Correo Electrónico</label>
+                <input type="text" name="email" id="">
+
+                <label for="birthday">Fecha de Nacimiento</label>
+                <input type="text" name="birthday" id="">
+            </div>
+        </form>
+    </section>
 </body>
 </html>
