Le agregamos el boton para poder llenar la informacio

--- a/assets/nuevoContacto.html
+++ b/assets/nuevoContacto.html
@@ -29,6 +29,8 @@
 
                 <label for="birthday">Fecha de Nacimiento</label>
                 <input type="text" name="birthday" id="">
+
+                <input class="btn" type="submit" value="Añadir Contacto">
             </div>
         </form>
     </section>
