Le pusismos forma al archivo para que se vieran bien los btn

--- a/assets/nuevoContacto.html
+++ b/assets/nuevoContacto.html
@@ -13,7 +13,7 @@
 
     <section class="nuevo" id="nuevo">
         <form>
-            <h2></h2>
+            <h2>Nuevo</h2>
             <div class="input-group">
                 <label for="name">Nombre Completo</label>
                 <input type="text" name="name" id="">
