--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -11,7 +11,7 @@
         <h1>CONTACTOS</h1>
         <nav>
             <ul>    
-                <li><a href="#">AGREGAR NUEVO CONTACTO</a></li>
+                <li><a href="./nuevoContacto.html">AGREGAR NUEVO CONTACTO</a></li>
                 <li><a href="#">FAVORITOS</a></li>
             </ul>
             </nav>
