--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <label form="pass">Password</label>
                 <input type="text" name="pass" id="">
         
-                <input class="btn" type="submit" value=Ingresar>
+                <a href="./assets/contacto.html"><input type="button" value="Agregar">
             </div>
         </form>
     </section>
