--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -12,14 +12,14 @@
         <nav>
             <ul>    
                 <li><a href="./nuevoContacto.html">AGREGAR NUEVO CONTACTO</a></li>
-                <li><a href="#">FAVORITOS</a></li>
+                <li><a href="./favoritos.html">FAVORITOS</a></li>
             </ul>
             </nav>
     </header>
 
     <div class="contenedor">
         <div class="section-contact" id="contacto1">
-            <img src="https://images.vexels.com/media/users/3/132335/isolated/preview/4af43ce1082231cba5e5aa60fbb03f2f-iconos-de-circulo-de-personal.png" width="90" height="90">
+            <img class="img" src="https://images.vexels.com/media/users/3/132335/isolated/preview/4af43ce1082231cba5e5aa60fbb03f2f-iconos-de-circulo-de-personal.png" width="90" height="90">
             <h3>Nombre</h3>
             <p>Josue Sebastian Ambrocio Alvarado</p>
             <button onclick="DetalleContacto()" id="num" href="">Detalle Contacto</button>
