Realizamos el div que vamos a utilizar para poner los contactos favoritos y le agregamos estilo al titulo de nuestra pagina

--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <header>
-        <h1>CONTACTOS FAVOTIOS</h1>
+        <h1>CONTACTOS FAVORITOS</h1>
     </header>
+    <div class="contenedor">
+        <div class="section-contact" id="contacto1">
+            <img class="img" src="https://images.vexels.com/media/users/3/132335/isolated/preview/4af43ce1082231cba5e5aa60fbb03f2f-iconos-de-circulo-de-personal.png" width="90" height="90">
+            <h3>Nombre</h3>
+            <p>Josue Sebastian Ambrocio Alvarado</p>
+            <button onclick="DetalleContacto()" id="num" href="">Detalle Contacto</button>
+        </div>
+    </div>
+    <script src="../assets/logica.js"></script>
+</body>
+</html>
