Le agregamos estilo al div con el marco y le pusismos el js para poder ver la funcionalidad

--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -17,6 +17,11 @@
             <p>Josue Sebastian Ambrocio Alvarado</p>
             <button onclick="DetalleContacto()" id="num" href="">Detalle Contacto</button>
         </div>
+
+        <div class="Detalle1" id="Detalle1">
+            <p>jdnodnoanp</p>
+            <a href="../assets/favoritos.html"><button>Regresar</button></a>
+        </div>
     </div>
     <script src="../assets/logica.js"></script>
 </body>
