--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -14,11 +14,23 @@
         <div class="section-contact" id="contacto1">
             <img class="img" src="https://images.vexels.com/media/users/3/132335/isolated/preview/4af43ce1082231cba5e5aa60fbb03f2f-iconos-de-circulo-de-personal.png" width="90" height="90">
             <h3>Nombre</h3>
-            <p>Josue Sebastian Ambrocio Alvarado</p>
+            <p>Oscar Alejandro Flores Yllescas</p>
             <button onclick="DetalleContacto()" id="num" href="">Detalle Contacto</button>
         </div>
 
         <div class="Detalle1" id="Detalle1">
+            <p>jdnodnoanp</p>
+            <a href="../assets/favoritos.html"><button>Regresar</button></a>
+        </div>
+
+        <div class="section-contact" id="contacto2">
+            <img src="https://images.vexels.com/media/users/3/132335/isolated/preview/4af43ce1082231cba5e5aa60fbb03f2f-iconos-de-circulo-de-personal.png" width="90" height="90">
+            <h3>Nombre</h3>
+            <p>Jose Carlos Ceferino Fabian</p>
+            <button onclick="DetalleContacto()" id="num" href="">Detalle Contacto</button>
+        </div>
+
+        <div class="Detalle2" id="Detalle2">
             <p>jdnodnoanp</p>
             <a href="../assets/favoritos.html"><button>Regresar</button></a>
         </div>
