Agregamos la seccion con la informacion que le vamos a mostrar al usuario y le agreamos su imagen y en contactos le agregamos el boton que nos iba a llevar hacia usaurio

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -13,6 +13,7 @@
             <ul>    
                 <li><a href="./nuevoContacto.html">AGREGAR NUEVO CONTACTO</a></li>
                 <li><a href="#">FAVORITOS</a></li>
+                <li><a href="./usuario.html">USUARIO</a></li>
             </ul>
             </nav>
     </header>
