--- a/assets/usuario.html
+++ b/assets/usuario.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../assets/style4.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuario</title>
 </head>
 <body>
-    
+    <section class="login" id="login">
+        <form>
+            <h2>USUARIO</h2>
+            <img src="https://sigie.maga.gob.gt/Images/individualf.png" alt="Imagen 2" width="200" height="200">
+            <div class="input-group">
+                <label form="name">Nombre: Josue Ambrocio</label>
+                <label form="pass">Correo Electronico: sebas17@gmail.com</label>
+                <label form="pass">Usuario: Sebas_GT</label>
+                <label form="pass">Estado: Activo</label>
+                <a href="./contacto.html"><input type="button" value="Regresar">
+            </div>
+        </form>
+    </section>
 </body>
 </html>
