Le cambiamos el nombre a la seccion y en css pusimos el fondo que ibamos a utilizar y pusismos nuestra informacion centrada

--- a/assets/usuario.html
+++ b/assets/usuario.html
@@ -7,7 +7,7 @@
     <title>Usuario</title>
 </head>
 <body>
-    <section class="login" id="login">
+    <section class="user" id="user">
         <form>
             <h2>USUARIO</h2>
             <img src="https://sigie.maga.gob.gt/Images/individualf.png" alt="Imagen 2" width="200" height="200">
