Le agregamos la funcion al detalle contacto y le pusismos estilo

--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -19,8 +19,20 @@
         </div>
 
         <div class="Detalle1" id="Detalle1">
-            <p>jdnodnoanp</p>
-            <a href="../assets/favoritos.html"><button>Regresar</button></a>
+            <section class="detalle id="detalle">
+                <form>
+                    <h2>DETALLE USUARIO</h2>
+                    <img src="https://sigie.maga.gob.gt/Images/individualf.png" alt="Imagen 2" width="200" height="200">
+                    <div class="input-group">
+                        <label form="name">Nombre: Josue Sebastian Ambrocio Alvarado</label>
+                        <label form="phone">Número de Teléfono: 78965874</label>
+                        <label form="direccion">Dirección: 1 Calle 11-55 Zona 9</label>
+                        <label form="email">Correo Electrónico: sebas17@gmail.com</label>
+                        <label form="birthday">Fecha de Nacimiento: 17 de abril del 2006</label>
+                        <a href="../assets/favoritos.html"><button>Regresar</button></a>
+                    </div>
+                </form>
+            </section>
         </div>
 
         <div class="section-contact" id="contacto2">
