Se agregaron cambios para mejorar programa

--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="Detalle1" id="Detalle1">
-            <section class="detalle id="detalle">
+            <div class="detalle" id="detalle">
                 <form>
                     <h2>DETALLE USUARIO</h2>
                     <img src="https://sigie.maga.gob.gt/Images/individualf.png" alt="Imagen 2" width="200" height="200">
@@ -28,7 +28,7 @@
                         <label form="phone">Número de Teléfono: 78965874</label>
                         <label form="direccion">Dirección: 1 Calle 11-55 Zona 9</label>
                         <label form="email">Correo Electrónico: sebas17@gmail.com</label>
-                        <label form="birthday">Fecha de Nacimiento: 17 de abril del 2006</label>
+                        <label form="birtday">Fecha de Nacimiento: 17 de abril del 2006</label>
                         <a href="../assets/favoritos.html"><button>Regresar</button></a>
                     </div>
                 </form>
@@ -43,9 +43,20 @@
         </div>
 
         <div class="Detalle2" id="Detalle2">
-            <p>jdnodnoanp</p>
-            <a href="../assets/favoritos.html"><button>Regresar</button></a>
-        </div>
+            <div class="detalle" id="detalle">
+                <form>
+                    <h2>DETALLE USUARIO</h2>
+                    <img src="https://sigie.maga.gob.gt/Images/individualf.png" alt="Imagen 2" width="200" height="200">
+                    <div class="input-group">
+                        <label form="name">Nombre: Jose Carlos Ceferino Fabian</label>
+                        <label form="phone">Número de Teléfono: 986358741</label>
+                        <label form="direccion">Dirección: 1 Avenidad 11-98 Ciudad San Cristobal</label>
+                        <label form="email">Correo Electrónico: cferino98@gmail.com</label>
+                        <label form="birtday">Fecha de Nacimiento: 10 de mayo del 2007</label>
+                        <a href="../assets/favoritos.html"><button>Regresar</button></a>
+                    </div>
+                </form>
+            </section>
     </div>
     <script src="../assets/logica.js"></script>
 </body>
