Terminamos de arreglar el css de ToDoList, tambien hicimos una modificacion en el boton de nuevo contacto y en contacto agregamos un nuevo boton

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -14,6 +14,7 @@
                 <li><a href="./nuevoContacto.html">AGREGAR NUEVO CONTACTO</a></li>
                 <li><a href="./favoritos.html">FAVORITOS</a></li>
                 <li><a href="./usuario.html">USUARIO</a></li>
+                <li><a href="./toDoList.html">TO DO LIST</a></li>
             </ul>
             </nav>
     </header>
