--- a/assets/nuevoContacto.html
+++ b/assets/nuevoContacto.html
@@ -27,7 +27,7 @@
                 <label for="birthday">Fecha de Nacimiento</label>
                 <input type="text" name="birthday" id="">
 
-                <input class="btn" type="submit" value="Añadir Contacto">
+                <a href="./contacto.html"><input type="button" value="Añadir Contacto"></a>
             </div>
         </form>
     </section>
