--- a/assets/toDoList.html
+++ b/assets/toDoList.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="./style5.css">
 </head>
 <body>
-    <h1>TO DO LIST</h1>
+    <header>
+        <h1>TO DO LIST</h1>
+        <nav>
+            <ul>    
+                <li><a href="./contacto.html">REGRESAR</a></li>
+            </ul>
+            </nav>
+    </header>
+
     <div class="contenedor">
         <input id="inicio" type="text"><button id="agregarTO">+</button>
         <div class="to-dos" id="toDoContenedor"></div>
