Arreglamos los ultimos errores que nos marcaba nuestro aplicativo, esta listo para subir a master

--- a/assets/favoritos.html
+++ b/assets/favoritos.html
@@ -7,12 +7,16 @@
     <title>Favoritos</title>
 </head>
 <body>
+
     <header>
-        <div class="header-content">
             <img src="https://images.vexels.com/media/users/3/134126/isolated/preview/37fb3358f410d3a764891e06e132c218-estrella-de-dibujos-animados-05.png" height="40px">
             <h1>CONTACTOS FAVORITOS</h1>
             <img src="https://images.vexels.com/media/users/3/134126/isolated/preview/37fb3358f410d3a764891e06e132c218-estrella-de-dibujos-animados-05.png" height="40px">
-        </div>
+        <nav>
+            <ul>    
+                <li><a href="./contacto.html">REGRESAR</a></li>
+            </ul>
+            </nav>
     </header>
     
     <div class="contenedor">
